WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
175994
Define *_GIGACAGE_MASK when Gigacage is not supported
https://bugs.webkit.org/show_bug.cgi?id=175994
Summary
Define *_GIGACAGE_MASK when Gigacage is not supported
Don Olmstead
Reported
2017-08-25 13:37:45 PDT
After
https://trac.webkit.org/changeset/221148/webkit
the WinCairo bots report the following errors error C2065: 'JSVALUE_GIGACAGE_MASK': undeclared identifier error C2065: 'PRIMITIVE_GIGACAGE_MASK': undeclared identifier
Attachments
Patch
(949 bytes, patch)
2017-08-25 13:41 PDT
,
Don Olmstead
no flags
Details
Formatted Diff
Diff
Patch
(929 bytes, patch)
2017-08-25 13:50 PDT
,
Don Olmstead
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Don Olmstead
Comment 1
2017-08-25 13:41:28 PDT
Created
attachment 319095
[details]
Patch Fix suggested by mlam on IRC. Built WinCairo successfully.
Filip Pizlo
Comment 2
2017-08-25 13:42:25 PDT
Comment on
attachment 319095
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=319095&action=review
> Source/WTF/wtf/Gigacage.h:33 > +#define PRIMITIVE_GIGACAGE_MASK UINTPTR_MAX > +#define JSVALUE_GIGACAGE_MASK UINTPTR_MAX
Why?
Mark Lam
Comment 3
2017-08-25 13:44:29 PDT
Comment on
attachment 319095
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=319095&action=review
>> Source/WTF/wtf/Gigacage.h:33 >> +#define JSVALUE_GIGACAGE_MASK UINTPTR_MAX > > Why?
The wincairo build which does not use bmalloc is failing to build. Is this the wrong fix for when bmalloc is not used?
Filip Pizlo
Comment 4
2017-08-25 13:45:05 PDT
(In reply to Mark Lam from
comment #3
)
> Comment on
attachment 319095
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=319095&action=review
> > >> Source/WTF/wtf/Gigacage.h:33 > >> +#define JSVALUE_GIGACAGE_MASK UINTPTR_MAX > > > > Why? > > The wincairo build which does not use bmalloc is failing to build. Is this > the wrong fix for when bmalloc is not used?
I see. OK.
Filip Pizlo
Comment 5
2017-08-25 13:45:18 PDT
Comment on
attachment 319095
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=319095&action=review
>>>> Source/WTF/wtf/Gigacage.h:33 >>>> +#define JSVALUE_GIGACAGE_MASK UINTPTR_MAX >>> >>> Why? >> >> The wincairo build which does not use bmalloc is failing to build. Is this the wrong fix for when bmalloc is not used? > > I see. OK.
Please set these to 0, not UINTPTR_MAX.
Mark Lam
Comment 6
2017-08-25 13:49:00 PDT
Comment on
attachment 319095
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=319095&action=review
>>>>> Source/WTF/wtf/Gigacage.h:33 >>>>> +#define JSVALUE_GIGACAGE_MASK UINTPTR_MAX >>>> >>>> Why? >>> >>> The wincairo build which does not use bmalloc is failing to build. Is this the wrong fix for when bmalloc is not used? >> >> I see. OK. > > Please set these to 0, not UINTPTR_MAX.
At first, I thought that the llint code is unconditionally applying the masm. But I see that the llint code only applies the mask if GIGACAGE_ENABLED. Hence, setting these to 0 makes sense.
Don Olmstead
Comment 7
2017-08-25 13:50:24 PDT
Created
attachment 319096
[details]
Patch Setting masks to 0
Mark Lam
Comment 8
2017-08-25 13:56:36 PDT
Comment on
attachment 319096
[details]
Patch r=me if EWS is green and if this patch makes the code build on wincairo (which was where this issue was detected) and tests passes there as well.
WebKit Commit Bot
Comment 9
2017-08-25 16:11:28 PDT
Comment on
attachment 319096
[details]
Patch Clearing flags on attachment: 319096 Committed
r221211
: <
http://trac.webkit.org/changeset/221211
>
WebKit Commit Bot
Comment 10
2017-08-25 16:11:30 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 11
2017-08-25 16:12:36 PDT
<
rdar://problem/34091627
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug