Define *_GIGACAGE_MASK when Gigacage is not supported https://bugs.webkit.org/show_bug.cgi?id=175994

Reviewed by Mark Lam.

* wtf/Gigacage.h:


Canonical link: https://commits.webkit.org/192658@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221211 268f45cc-cd09-0410-ab3c-d52691b4dbfc